# mlflow-pipeline

./: .gitignore  Dockerfile  OK_drift_report.html  README.md  confusion_matrix.csv  data_drift_report.html  drift_report.html  mlflow.db  pyproject.toml  serve.py  test_reference.csv  train_reference.csv
.github/workflows/: pipeline.yaml
mlruns/0/12efa58b95f04f2082e6d80841bcf4f3/artifacts/: train_reference.csv
mlruns/0/6c65c41a30b74b3eade33c4bde3742fb/artifacts/: train_reference.csv
mlruns/0/b634f3ef2d154007a2ddb648b1b5be8f/artifacts/: train_reference.csv
mlruns/0/e853bb347b934861bef308d115bd9ccc/artifacts/: train_reference.csv
mlruns/1/3132ce9e636c4700b0dca85ad92e27a7/artifacts/: train_reference.csv
mlruns/1/4c706af6304943998152ad78a738e780/artifacts/: train_reference.csv
mlruns/1/4d7ea2ed02524a2aadbbd02a728dfab9/artifacts/: confusion_matrix.csv  metric_info.json  test_reference.csv  train_reference.csv
mlruns/1/81f28cdbb42742fe9a4eddaa9f582d10/artifacts/: train_reference.csv
production_ml_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: inspect_model.py  monitor.py  predict.py  train.py
